# LLM_Server_Router

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml  test_gemini_stream.py
.agents/rules/: auto-catch-up.md  commit.md  follow-up.md
.github/agents/: bug-triage.agent.md  secure-git-commit.agent.md
.github/prompts/: plan-llmServerRouterImprovements.prompt.md
backend/: __init__.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/routers/: benchmark_routes.py  config_export_routes.py  dev_routes.py  inference_storage_routes.py  lmstudio_routes.py  metrics_routes.py  model_group_routes.py  model_routes.py  ollama_compat_router.py  ollama_routes.py  openai_router.py  process_routes.py  provider_routes.py  report_routes.py  runtime_routes.py  settings_routes.py  terminal_routes.py  virtual_model_routes.py
backend/app/core/: config.py  dev_logs.py  process_manager.py  provider_helpers.py  request_stats.py  runtime_settings.py
backend/app/services/: benchmark_runner.py  lmstudio_service.py  mesh_health.py  model_scanner.py  ollama_service.py  route_resolver.py  system_metrics.py  tool_normalizer.py
backend/app/services/adapters/: __init__.py  anthropic_adapter.py  base.py  (+1 more)
docs/: DESIGN_DOC.md  FULL_GUIDE.md  FULL_GUIDE_EN.md  SETUP.md  auto-catch-up.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/lib/: tailscale-origins.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts  model-preset-recipes.ts
(+14 files in other folders)
